--- a/index.html
+++ b/index.html
@@ -1,24 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
+<!--[if gt IE 9]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- My css -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Zamjaroh Graduation Countdown</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zamjaroh Couple group photos slideshow and Graduation day countdown" />
+    <meta name="keywords" content="css3, css-only, fullscreen, background, slideshow, images, content" />
+    <meta name="author" content="Codrops" />
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="css/style1.css" />
+    <script type="text/javascript" src="js/modernizr.custom.86080.js"></script>
 </head>
 
-<body>
-    <div>
-        <img src="img/favicon1.png" alt="">
+<body id="page">
+    <ul class="cb-slideshow">
+        <li><span>Image 01</span>
+            <div>
+
+            </div>
+        </li>
+        <li><span>Image 02</span>
+            <div>
+
+            </div>
+        </li>
+        <li><span>Image 03</span>
+            <div>
+
+            </div>
+        </li>
+        <li><span>Image 04</span>
+            <div>
+
+            </div>
+        </li>
+        <li><span>Image 05</span>
+            <div>
+
+            </div>
+        </li>
+        <li><span>Image 06</span>
+            <div>
+
+            </div>
+        </li>
+        <li><span>Image 07</span>
+            <div>
+
+            </div>
+        </li>
+    </ul>
+    <div class="container">
+        <!--/ Codrops top bar -->
+        <header style="background-color: rgba(92, 92, 92, 0.288); width: 220px; margin-top: 5px; padding: 5px;">
+            <h1 id="demo"></h1>
+            <h2>Countdown to Graduation day</h2>
+        </header>
     </div>
 
+    <script>
+        // Set the date we're counting down to
+        var countDownDate = new Date("Jun 3, 2021 23:59:59").getTime();
+
+        // Update the count down every 1 second
+        var x = setInterval(function () {
+
+            // Get today's date and time
+            var now = new Date().getTime();
+
+            // Find the distance between now and the count down date
+            var distance = countDownDate - now;
+
+            // Time calculations for days, hours, minutes and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            // Output the result in an element with id="demo"
+            document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+                + minutes + "m " + seconds + "s ";
+
+            // If the count down is over, write some text 
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("demo").innerHTML = "Graduation Day!";
+            }
+        }, 1000);
+    </script>
 </body>
 
 </html>
